test/for/error/for-error-comma.lua

-- Errore nella sintassi del ciclo for
-- Non è presenta la virgola tra l'inizializzazione e il passo
for i = 1 10, 1 do
    print(i)
end

for i = 1, 10 1 do
    print(i)
end